[package]
name = "wasm-audio-thing"
version = "0.1.0"
authors = ["wanjer"]
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1.6"
js-sys = "0.3.51"
log = "0.4.14"
wasm-bindgen = "0.2.74"
wasm-logger = "0.2.0"
wee_alloc = "0.4.5"

[dependencies.web-sys]
version = "0.3.51"
features = [
    "Document",
    "Event",
    "EventTarget",
    "HtmlElement",
    "HtmlInputElement",
    "Node",
    "Text",
    "Window",

    "AudioContext",
    "AudioDestinationNode",
    "AudioNode",
    "AudioParam",
    "GainNode",
    "OscillatorNode",
    "OscillatorType",
]
